fix(blog): remove post bottom extra space in lists

--- a/source/_imports/components/django.cms.blog.css
+++ b/source/_imports/components/django.cms.blog.css
@@ -270,6 +270,7 @@ ul.post-detail {
   line-height: 1.5;
   color: var(--global-color-primary--dark);
 }
+.blog-lead p:last-child { margin-bottom: 0 /* overwrite Boostrap */ }
 
 
 
